[package]
name = "sol"
version = "0.1.0"
edition = "2021"
authors = ["Florian Büstgens <fb@fx-ttr.de>"]
description = "A acme-inspired editor for FreeBSD (server)"
readme = "README.md"
license = "BSD-2-Clause"
categories = ["text-editors"]
repository = "https://github.com/fxttr/sol"
keywords = ["editor", "freebsd", "acme"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libzetta = "0.3.1"
clap = { version = "3.2.12", features = ["derive"] }